# contextctl

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: design.md  implementation_plan.md  manual-test-report-2025-11-18.md  manual_testing.md  problem_definition.md  prompt_library_cli_plan.md  refactor-test-report-2025-11-20.md  troubleshooting.md
scripts/: release.sh
src/contextctl/: __init__.py  cli.py  config.py  content.py  models.py  store.py
src/contextctl/_internal/: __init__.py  clipboard.py  filters.py  loaders.py  state.py  utils.py
src/contextctl/_internal/commands/: __init__.py  init_cmd.py  list_cmd.py  rules_cmd.py  run_cmd.py  search_cmd.py  tree_cmd.py
src/contextctl/_internal/output/: __init__.py  formatters.py  renderers.py
tests/: __init__.py  conftest.py  payloads.py  test_cli.py  test_config.py  test_content.py  test_hello.py  test_models.py  test_package.py  test_store.py
